--- a/style.css
+++ b/style.css
@@ -1,38 +1,251 @@
 
-*{
-    box-sizing: border-box;
-}
-html{
-    line-height: 1.15;
-}
-body{
-    font-family: "Roboto", sans-serif;
-    font-size: medium;
-    font-weight: 400;
-    line-height: 1.5;
-    color: #6c757d;
-    text-align: left;
-    background-color: #fff;
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
-/*header*/
+html {
+  font-family: sans-serif;
+  line-height: 1.15;
+  -webkit-text-size-adjust: 100%;
+  -webkit-tap-highlight-color: rgb(255, 0, 85);
+}
+
+ 
+
+body {
+  margin: 0;
+  font-family: "Roboto", sans-serif;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #795555;
+  text-align: left;
+  background-color: #5a8893;
+}
+ 
+a {
+  color: #0BCEAF;
+  text-decoration: none;
+  background-color: transparent;
+}
+
+a:hover {
+  color: #078571;
+  text-decoration: underline;
+}
+ 
+h1,h2,h3,h4,h5,h6,p{
+  color: #ffffff !important;
+} 
+
+ 
+
+/********** Template CSS ************/
+
+
+.text-stroke-header {
+  -webkit-text-stroke: 3px #000000;
+  color: transparent;
+}
+
+.btn {
+  padding: 10px 25px;
+  border-radius: 100px;
+  color: #343a40;
+}
+
+.btn-social {
+  width: 45px;
+  height: 45px;
+  padding-left: 0;
+  padding-right: 0;
+  text-align: center;
+  border-radius: 45px;
+}
+
+.form-control {
+  border-radius: 25px;
+}
+
+.text-secondary,
+.text-primary {
+    color: #033f44 !important;
+}
+
+.btn-outline-primary,
+.btn-outline-dark {
+    border-color: rgb(143, 197, 143) !important;
+}
+.btn-outline-primary:hover,
+.btn-outline-dark:hover {
+    background-color: #b3c4c9 !important;
+}
+
+/* Change navbar background color to white */
+.navbar {
+    background-color: #f8f8f8 !important;
+}
+
+/* Change text color in footer */
+.container-fluid.blue-bg.text-white {
+    color: #8f7b7b !important;
+}
+
+/* Change social media icons color */
+.btn-social i {
+    color: #2d2a2a !important;
+}
+
+/* ================ Navigation Menu ====================*/
+
+
+.navbar-light {
+  display: none;
+}
+
+.navbar-light .navbar-nav .nav-link {
+  padding: 25px 10px;
+  color: #343a40;
+  font-weight: 500;
+  outline: none;
+}
+
+.navbar-light .navbar-nav .nav-link:hover,
+.navbar-light .navbar-nav .nav-link.active {
+  color: #0BCEAF;
+}
+
+@media (max-width: 991.98px) {
+  .navbar-light .navbar-nav .nav-link {
+    padding: 10px 0;
+  }
+}
+
+
+/*===================== Hero section ======================*/
+
 .about-img{
-    margin-left: auto;
-    margin-right: -60px;
+ margin-left: -100px;
+ right: -60px;
+}
+
+.display-1{
+  font-size: 160px;
+  font-weight: 1000;
+}
+ 
+.position-absolute{
+  font-weight: 700;
+  
+}
+
+.typed-cursor {
+  font-size: 45px;
+  color: #ffffff;
+}
+
+.blue{
+  background-color:  rgb(154, 161, 206);;
+  color: #633b3b;
 }
 .btn{
-    padding: 10px 25px;
-    border-radius: 100px;
-}
+  border: 2px solid rgb(53, 65, 87);
+} 
 .btn-white{
-    background-color: #ffff;
-    border: 2px solid #ffff;
+  background-color: #d4bebe;
+  border:2px solid #ffffff;
 }
-.btn-blue{
-    border: 2.4px solid #ffff;
-    color: #ffff;
+
+@media (max-width: 700px) {
+  .about-img{
+    margin-left: 20px;
+    right: 0px;
+    top: 30px;
+   }
 }
-.hero-text{
-    margin-top: 150px;
-    
+/*===================== Progress Bar ====================*/
+
+.progress {
+  border-radius: 10px;
+}
+
+.progress .progress-bar {
+  width: 0px;
+  border-radius: 10px;
+  transition: 2s;
+}
+
+
+/* =================== Portfolio section ==================*/
+
+
+.portfolio-item .portfolio-btn {
+  position: absolute;
+  width: 0;
+  height: 0;
+  top: 50%;
+  left: 50%;
+  border-radius: 4px;
+  opacity: 0;
+  transition: .5s;
+}
+
+.portfolio-item:hover .portfolio-btn {
+  opacity: 1;
+  width: calc(100% - 60px);
+  height: calc(100% - 60px);
+  top: 30px;
+  left: 30px;
+}
+
+
+/* ========================== Contact Us ========================*/
+
+.contact-form .help-block ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+
+/*====================== Back to buttom ==================*/
+
+.scroll-to-bottom {
+  position: fixed;
+  width: 20px;
+  left: calc(50% - 10px);
+  bottom: 30px;
+  z-index: 11;
+  animation: action 1s infinite alternate;
+}
+
+.back-to-top {
+  position: fixed;
+  display: none;
+  width: 30px;
+  text-align: center;
+  right: 30px;
+  bottom: 30px;
+  z-index: 11;
+  animation: action 1s infinite alternate;
+}
+
+@keyframes action {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-15px);
+  }
+}
+
+.blue-bg {
+  background-color: rgb(0, 33, 46);
+}
+
+.blue-text {
+  color: rgb(255, 255, 255);
 }
